테스트 커밋 / 상품 js 수정

--- a/src/product/PC_SHP_1000.html
+++ b/src/product/PC_SHP_1000.html
@@ -6,6 +6,7 @@
 		"webroot": "."
 	})
 	<script src="/web/assets/js/modernizr.js"></script>
+	<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/jquery.textfill.js"></script>
 	<script src="/web/assets/js/product.js"></script>
 	<link rel="stylesheet" href="/web/assets/css/product.css">
 </head>
@@ -59,28 +60,28 @@
 													<div class="swiper-pagination"></div>
 												</div>
 											</a>
-											<div class="menu__layer">
+											<div class="menu__layer" style="display:block">
 												<div class="menu__dimmed"></div>
 												<div class="menu__buttons">
 													<button type="button" class="menu__button menu__button--cart">CART</button>
 													<a href="#" class="menu__button">DETAIL</a>
 												</div>
-												<div class="menu__option">
+												<div class="menu__option" style="display:block">
 													<div class="menu__sizes">
 														<div>
-															<button type="button" class="menu__size menu__size--selected">F</button>
+															<button type="button" class="menu__size menu__size--selected"><span>F</span></button>
 														</div>
 														<div>
-															<button type="button" class="menu__size">S</button>
+															<button type="button" class="menu__size"><span>12/ 12pro</span></button>
 														</div>
 														<div>
-															<button type="button" class="menu__size">M</button>
+															<button type="button" class="menu__size"><span>11 pro</span></button>
 														</div>
 														<div>
-															<button type="button" class="menu__size">L</button>
+															<button type="button" class="menu__size"><span>L</span></button>
 														</div>
 														<div>
-															<button type="button" class="menu__size menu__size--disabled">XL</button>
+															<button type="button" class="menu__size menu__size--disabled"><span>XL</span></button>
 														</div>
 													</div>
 													<div class="menu__count">
