스와이퍼 버전업에 따른 클래스명 변경

--- a/src/search/PC_ODR_1001.html
+++ b/src/search/PC_ODR_1001.html
@@ -33,7 +33,7 @@
 													<span class="menu__color"></span>
 													<span class="menu__color"></span>
 												</div> 
-												<div class="menu__swiper swiper-container">
+												<div class="menu__swiper swiper">
 													<ul class="swiper-wrapper">
 														<li class="swiper-slide">
 															<div class="menu__img"><img src="/web/assets/images/product.png" alt="상품"></div>
@@ -132,7 +132,7 @@
 													<span class="menu__color"></span>
 													<span class="menu__color"></span>
 												</div>
-												<div class="menu__swiper swiper-container">
+												<div class="menu__swiper swiper">
 													<ul class="swiper-wrapper">
 														<li class="swiper-slide">
 															<div class="menu__img"><img src="/web/assets/images/product.png" alt="상품"></div>
@@ -206,7 +206,7 @@
 													<span class="menu__color"></span>
 													<span class="menu__color"></span>
 												</div>
-												<div class="menu__swiper swiper-container">
+												<div class="menu__swiper swiper">
 													<ul class="swiper-wrapper">
 														<li class="swiper-slide">
 															<div class="menu__img"><img src="/web/assets/images/dummy.png" alt="상품"></div>
