--- a/src/product/PC_SHP_1000.html
+++ b/src/product/PC_SHP_1000.html
@@ -48,7 +48,7 @@
 													<span class="menu__color"></span>
 													<span class="menu__color"></span>
 												</div>
-												<div class="menu__swiper swiper-container">
+												<div class="menu__swiper swiper">
 													<ul class="swiper-wrapper">
 														<li class="swiper-slide">
 															<div class="menu__img"><img src="/web/assets/images/product.png" alt="상품"></div>
@@ -147,7 +147,7 @@
 													<span class="menu__color"></span>
 													<span class="menu__color"></span>
 												</div>
-												<div class="menu__swiper swiper-container">
+												<div class="menu__swiper swiper">
 													<ul class="swiper-wrapper">
 														<li class="swiper-slide">
 															<div class="menu__img"><img src="/web/assets/images/product.png" alt="상품"></div>
@@ -221,7 +221,7 @@
 													<span class="menu__color"></span>
 													<span class="menu__color"></span>
 												</div>
-												<div class="menu__swiper swiper-container">
+												<div class="menu__swiper swiper">
 													<ul class="swiper-wrapper">
 														<li class="swiper-slide">
 															<div class="menu__img"><img src="/web/assets/images/dummy.png" alt="상품"></div>
@@ -295,7 +295,7 @@
 													<span class="menu__color"></span>
 													<span class="menu__color"></span>
 												</div>
-												<div class="menu__swiper swiper-container">
+												<div class="menu__swiper swiper">
 													<ul class="swiper-wrapper">
 														<li class="swiper-slide">
 															<div class="menu__img"><img src="/web/assets/images/dummy.png" alt="상품"></div>
@@ -369,7 +369,7 @@
 													<span class="menu__color"></span>
 													<span class="menu__color"></span>
 												</div>
-												<div class="menu__swiper swiper-container">
+												<div class="menu__swiper swiper">
 													<ul class="swiper-wrapper">
 														<li class="swiper-slide">
 															<div class="menu__img"><img src="/web/assets/images/dummy.png" alt="상품"></div>
