수정사항 반영중

--- a/src/product/PC_SHP_1001.html
+++ b/src/product/PC_SHP_1001.html
@@ -142,6 +142,12 @@
 										<span class="rv__writer">test***</span> 아기 로션 냄새가 날 것 같은 티 너무 예뻐서 애용중입니당 아기 로션 냄새가 날 것 같은 티 너무 예뻐서 애용중입니당
 									</p>
 								</li>
+								<li class="rv__item">
+									<p class="rv__figure"><img src="/web/assets/images/temp/@product01.png"></p>
+									<p class="rv__box">
+										<span class="rv__writer">test***</span> 아기 로션 냄새가 날 것 같은 티 너무 예뻐서 애용중입니당 아기 로션 냄새가 날 것 같은 티 너무 예뻐서 애용중입니당
+									</p>
+								</li>
 							</ul>
 						</div>
 
@@ -624,46 +630,8 @@
 														<div class="menu__img"><img src="/web/assets/images/dummy.png" alt="상품"></div>
 													</li>
 												</ul>
-												<div class="swiper-pagination"></div>
 											</div>
 										</a>
-										<div class="menu__layer">
-											<div class="menu__dimmed"></div>
-											<div class="menu__buttons">
-												<button type="button" class="menu__button menu__button--cart">CART</button>
-												<a href="#" class="menu__button">DETAIL</a>
-											</div>
-											<div class="menu__option">
-												<div class="menu__sizes">
-													<div>
-														<button type="button" class="menu__size menu__size--selected">F</button>
-													</div>
-													<div>
-														<button type="button" class="menu__size">S</button>
-													</div>
-													<div>
-														<button type="button" class="menu__size">M</button>
-													</div>
-													<div>
-														<button type="button" class="menu__size">L</button>
-													</div>
-													<div>
-														<button type="button" class="menu__size menu__size--disabled">XL</button>
-													</div>
-												</div>
-												<div class="menu__count">
-													<button type="button" class="menu__button"><img src="/web/assets/images/btn_count_down.gif" alt=""></button>
-													<span class="menu__current">1</span>
-													<button type="button"><img src="/web/assets/images/btn_count_up.gif" alt=""></button>
-												</div>
-												<div class="menu__buttons">
-													<button type="button" class="menu__button">ADD TO CART</button>
-												</div>
-												<button class="menu__close">
-													<span class="a11y">닫기</span>
-												</button>
-											</div>
-										</div>
 									</div>
 								</div>
 								<div class="menu__info">
@@ -694,50 +662,9 @@
 													<li class="swiper-slide">
 														<div class="menu__img"><img src="/web/assets/images/dummy.png" alt="상품"></div>
 													</li>
-													<li class="swiper-slide">
-														<div class="menu__img"><img src="/web/assets/images/dummy.png" alt="상품"></div>
-													</li>
 												</ul>
-												<div class="swiper-pagination"></div>
 											</div>
 										</a>
-										<div class="menu__layer">
-											<div class="menu__dimmed"></div>
-											<div class="menu__buttons">
-												<button type="button" class="menu__button menu__button--cart">CART</button>
-												<a href="#" class="menu__button">DETAIL</a>
-											</div>
-											<div class="menu__option">
-												<div class="menu__sizes">
-													<div>
-														<button type="button" class="menu__size menu__size--selected">F</button>
-													</div>
-													<div>
-														<button type="button" class="menu__size">S</button>
-													</div>
-													<div>
-														<button type="button" class="menu__size">M</button>
-													</div>
-													<div>
-														<button type="button" class="menu__size">L</button>
-													</div>
-													<div>
-														<button type="button" class="menu__size menu__size--disabled">XL</button>
-													</div>
-												</div>
-												<div class="menu__count">
-													<button type="button" class="menu__button"><img src="/web/assets/images/btn_count_down.gif" alt=""></button>
-													<span class="menu__current">1</span>
-													<button type="button"><img src="/web/assets/images/btn_count_up.gif" alt=""></button>
-												</div>
-												<div class="menu__buttons">
-													<button type="button" class="menu__button">ADD TO CART</button>
-												</div>
-												<button class="menu__close">
-													<span class="a11y">닫기</span>
-												</button>
-											</div>
-										</div>
 									</div>
 								</div>
 								<div class="menu__info">
