수정사항 반영중

--- a/src/product/PC_SHP_1001.html
+++ b/src/product/PC_SHP_1001.html
@@ -85,6 +85,7 @@
 								<div class="option__item">
 									<div class="product__name">
 										22SS 레이어드 크롭 자켓 그레이 
+										<span class="opt__type">M</span>
 									</div>
 									<div class="product__etc">
 										<div class="qty__wrap">
@@ -103,6 +104,7 @@
 								<div class="option__item">
 									<div class="product__name">
 										22SS 레이어드 크롭 자켓 그레이 레이어드 크롭 자켓 그레이
+										<span class="opt__type">12/12 PRO</span>
 									</div>
 									<div class="product__etc">
 										<div class="qty__wrap">
