수정사항 반영 중

--- a/src/product/PC_SHP_1001.html
+++ b/src/product/PC_SHP_1001.html
@@ -58,8 +58,17 @@
 
 						<!-- option -->
 						<a href="#product__option" class="mo__fixed__option">
-							<p class="product__opt--title">OPTION</p>
-							<p class="btn__buy">BUY</p>
+							<div class="opt_inner opt_top">
+								<p class="product__opt--title">OPTION</p>
+								<p class="btn__buy">BUY</p>
+							</div>
+							<div class="opt_inner opt_bottom">
+								<div class="product__opt--title">
+									<p class="opt__name">레이어드 크롭자켓 오하이오 색상</p>
+									<p class="opt__price">₩80,000</p>
+								</div>
+								<p class="btn__buy">BUY</p>
+							</div>
 						</a>
 						<div id="product__option" class="product__option">
 							<p class="product__opt--title">OPTION</p>
