베스트 메뉴 작업중

--- a/src/PC_MAN_1000.html
+++ b/src/PC_MAN_1000.html
@@ -213,6 +213,11 @@
 												<div class="best-menu__img"><img src="/web/assets/images/dummy.png" alt=""></div>
 											</div>
 										</div>
+										<div class="swiper-slide">
+											<div class="best-menu__inner">
+												<div class="best-menu__img"><img src="/web/assets/images/@img_product_celeb.png" alt=""></div>
+											</div>
+										</div>
 									</div>
 								</div>
 							</div>
