수정사항 반영

--- a/src/product/PC_SHP_1001.html
+++ b/src/product/PC_SHP_1001.html
@@ -146,20 +146,23 @@
 									4.8 <span>(36)</span>
 								</p>
 							</div>
-							<ul class="product__reivew--list">
-								<li class="rv__item">
-									<p class="rv__figure"><img src="/web/assets/images/temp/@product01.png"></p>
-									<p class="rv__box">
-										<span class="rv__writer">test***</span> 아기 로션 냄새가 날 것 같은 티 너무 예뻐서 애용중입니당 아기 로션 냄새가 날 것 같은 티 너무 예뻐서 애용중입니당
-									</p>
-								</li>
-								<li class="rv__item">
-									<p class="rv__figure"><img src="/web/assets/images/temp/@product01.png"></p>
-									<p class="rv__box">
-										<span class="rv__writer">test***</span> 아기 로션 냄새가 날 것 같은 티 너무 예뻐서 애용중입니당 아기 로션 냄새가 날 것 같은 티 너무 예뻐서 애용중입니당
-									</p>
-								</li>
-							</ul>
+							<div class="productReview swiper-container">
+								<ul class="product__reivew--list swiper-wrapper">
+									<li class="rv__item swiper-slide">
+										<p class="rv__figure"><img src="/web/assets/images/temp/@product01.png"></p>
+										<p class="rv__box">
+											<span class="rv__writer">test***</span> 1아기 로션 냄새가 날 것 같은 티 너무 예뻐서 애용중입니당 아기 로션 냄새가 날 것 같은 티 너무 예뻐서 애용중입니당
+										</p>
+									</li>
+									<li class="rv__item swiper-slide">
+										<p class="rv__figure"><img src="/web/assets/images/temp/@product01.png"></p>
+										<p class="rv__box">
+											<span class="rv__writer">test***</span> 2아기 로션 냄새가 날 것 같은 티 너무 예뻐서 애용중입니당 아기 로션 냄새가 날 것 같은 티 너무 예뻐서 애용중입니당
+										</p>
+									</li>
+								</ul>
+							</div>
+							
 						</div>
 
 						<!-- more -->
@@ -544,8 +547,8 @@
 												<span class="menu__color"></span>
 												<span class="menu__color"></span>
 											</div>
-											<div class="menu__swiper swiper-container">
-												<ul class="swiper-wrapper">
+											<div class="menu__swiper">
+												<ul>
 													<li class="swiper-slide">
 														<div class="menu__img"><img src="/web/assets/images/product.png" alt="상품"></div>
 													</li>
@@ -602,8 +605,8 @@
 												<span class="menu__color"></span>
 												<span class="menu__color"></span>
 											</div>
-											<div class="menu__swiper swiper-container">
-												<ul class="swiper-wrapper">
+											<div class="menu__swiper">
+												<ul>
 													<li class="swiper-slide">
 														<div class="menu__img"><img src="/web/assets/images/product.png" alt="상품"></div>
 													</li>
@@ -635,8 +638,8 @@
 												<span class="menu__color"></span>
 												<span class="menu__color"></span>
 											</div>
-											<div class="menu__swiper swiper-container">
-												<ul class="swiper-wrapper">
+											<div class="menu__swiper">
+												<ul>
 													<li class="swiper-slide">
 														<div class="menu__img"><img src="/web/assets/images/dummy.png" alt="상품"></div>
 													</li>
@@ -668,8 +671,8 @@
 												<span class="menu__color"></span>
 												<span class="menu__color"></span>
 											</div>
-											<div class="menu__swiper swiper-container">
-												<ul class="swiper-wrapper">
+											<div class="menu__swiper">
+												<ul>
 													<li class="swiper-slide">
 														<div class="menu__img"><img src="/web/assets/images/dummy.png" alt="상품"></div>
 													</li>
