상품목록 수정 일단 커밋

--- a/src/product/PC_SHP_1000.html
+++ b/src/product/PC_SHP_1000.html
@@ -60,13 +60,13 @@
 													<div class="swiper-pagination"></div>
 												</div>
 											</a>
-											<div class="menu__layer" style="display:block">
+											<div class="menu__layer">
 												<div class="menu__dimmed"></div>
 												<div class="menu__buttons">
 													<button type="button" class="menu__button menu__button--cart">CART</button>
 													<a href="#" class="menu__button">DETAIL</a>
 												</div>
-												<div class="menu__option" style="display:block">
+												<div class="menu__option">
 													<div class="menu__sizes">
 														<div>
 															<button type="button" class="menu__size menu__size--selected"><span>F</span></button>
@@ -104,7 +104,7 @@
 										<div class="menu__right">
 											<span class="menu__event">COUPON</span>
 											<p class="menu__discount">₩46,000</p>
-											<p class="menu__price">₩50,000(30%)</p>
+											<p class="menu__price">₩50,000</p>
 										</div>
 									</div>
 								</li>
