상품상세 수정 중

--- a/src/product/PC_SHP_1000.html
+++ b/src/product/PC_SHP_1000.html
@@ -168,16 +168,16 @@
 												<div class="menu__option">
 													<div class="menu__sizes">
 														<div>
-															<button type="button" class="menu__size menu__size--selected">F</button>
+															<button type="button" class="menu__size menu__size--selected"><span>F</span></button>
 														</div>
 														<div>
-															<button type="button" class="menu__size">S</button>
+															<button type="button" class="menu__size"><span>S</span></button>
 														</div>
 														<div>
-															<button type="button" class="menu__size">M</button>
+															<button type="button" class="menu__size"><span>M</span></button>
 														</div>
 														<div>
-															<button type="button" class="menu__size">L</button>
+															<button type="button" class="menu__size"><span>L</span></button>
 														</div>
 														<div>
 															<button type="button" class="menu__size menu__size--disabled">XL</button>
@@ -242,16 +242,16 @@
 												<div class="menu__option">
 													<div class="menu__sizes">
 														<div>
-															<button type="button" class="menu__size menu__size--selected">F</button>
+															<button type="button" class="menu__size menu__size--selected"><span>F</span></button>
 														</div>
 														<div>
-															<button type="button" class="menu__size">S</button>
+															<button type="button" class="menu__size"><span>S</span></button>
 														</div>
 														<div>
-															<button type="button" class="menu__size">M</button>
+															<button type="button" class="menu__size"><span>M</span></button>
 														</div>
 														<div>
-															<button type="button" class="menu__size">L</button>
+															<button type="button" class="menu__size"><span>L</span></button>
 														</div>
 														<div>
 															<button type="button" class="menu__size menu__size--disabled">XL</button>
@@ -316,16 +316,16 @@
 												<div class="menu__option">
 													<div class="menu__sizes">
 														<div>
-															<button type="button" class="menu__size menu__size--selected">F</button>
+															<button type="button" class="menu__size menu__size--selected"><span>F</span></button>
 														</div>
 														<div>
-															<button type="button" class="menu__size">S</button>
+															<button type="button" class="menu__size"><span>S</span></button>
 														</div>
 														<div>
-															<button type="button" class="menu__size">M</button>
+															<button type="button" class="menu__size"><span>M</span></button>
 														</div>
 														<div>
-															<button type="button" class="menu__size">L</button>
+															<button type="button" class="menu__size"><span>L</span></button>
 														</div>
 														<div>
 															<button type="button" class="menu__size menu__size--disabled">XL</button>
@@ -390,16 +390,16 @@
 												<div class="menu__option">
 													<div class="menu__sizes">
 														<div>
-															<button type="button" class="menu__size menu__size--selected">F</button>
+															<button type="button" class="menu__size menu__size--selected"><span>F</span></button>
 														</div>
 														<div>
-															<button type="button" class="menu__size">S</button>
+															<button type="button" class="menu__size"><span>S</span></button>
 														</div>
 														<div>
-															<button type="button" class="menu__size">M</button>
+															<button type="button" class="menu__size"><span>M</span></button>
 														</div>
 														<div>
-															<button type="button" class="menu__size">L</button>
+															<button type="button" class="menu__size"><span>L</span></button>
 														</div>
 														<div>
 															<button type="button" class="menu__size menu__size--disabled">XL</button>
