--- a/src/product/PC_SHP_1001.html
+++ b/src/product/PC_SHP_1001.html
@@ -194,18 +194,21 @@
 								</div>
 								<div class="accord_panel">
 									<div class="membership__benefit">
-										<p>멤버십 등급별 상시할인이 자동적용됩니다. <a href="/member/membership.html">멤버십</a></p>
+										<p>멤버십 등급별 상시할인이 자동적용됩니다. <a href="/member/membership.html" class="btn">멤버십</a></p>
 										<p>
-											<span>퀸텟</span>
-											<span>상시할인 10% + 적립 5%</span>
+											<strong>퀸텟</strong>
+											<span>상시할인 10%</span>
+											<span>+ &nbsp;적립 5%</span>
 										</p>
 										<p>
-											<span>콰르텟</span>
-											<span>상시할인 7% + 적립 5%</span>
+											<strong>콰르텟</strong>
+											<span>상시할인 7%</span>
+											<span>+ &nbsp;적립 5%</span>
 										</p>
 										<p>
-											<span>트리오</span>
-											<span>상시할인 5% + 적립 4%</span>
+											<strong>트리오</strong>
+											<span>상시할인 5%</span>
+											<span>+ &nbsp;적립 4%</span>
 										</p>
 									</div>
 								</div>
