--- a/src/product/PC_SHP_1001.html
+++ b/src/product/PC_SHP_1001.html
@@ -392,6 +392,8 @@
 										<p class="info_tag">158~168cm</p>
 										<p class="info_tag">40~48kg</p>
 										<p class="info_tag">M</p>
+
+										<button type="button" class="btn__rvshare"></button>
 									</div>
 									<p class="review__list--line"></p>
 								</li>
@@ -432,6 +434,8 @@
 										<p class="info_tag">158~168cm</p>
 										<p class="info_tag">40~48kg</p>
 										<p class="info_tag">M</p>
+
+										<button type="button" class="btn__rvshare"></button>
 									</div>
 									<p class="review__list--line"></p>
 								</li>
@@ -468,6 +472,8 @@
 										<p class="info_tag">158~168cm</p>
 										<p class="info_tag">40~48kg</p>
 										<p class="info_tag">M</p>
+
+										<button type="button" class="btn__rvshare"></button>
 									</div>
 									<p class="review__list--line"></p>
 								</li>
@@ -502,6 +508,8 @@
 										<p class="info_tag">158~168cm</p>
 										<p class="info_tag">40~48kg</p>
 										<p class="info_tag">M</p>
+
+										<button type="button" class="btn__rvshare"></button>
 									</div>
 									<p class="review__list--line"></p>
 								</li>
