--- a/src/PC_MAN_1000.html
+++ b/src/PC_MAN_1000.html
@@ -6,8 +6,8 @@
 	"pagetitle": "인스턴트펑크 공식홈페이지 - 인스턴트펑크 INSTANTFUNK",
 	"webroot": "."
 	})
-	<script src="/web/assets/js/main.js"></script>
-	<link rel="stylesheet" href="/web/assets/css/main.css">
+	<script src="/assets/js/main.js"></script>
+	<link rel="stylesheet" href="/assets/css/main.css">
 </head>
 
 <body>
@@ -200,22 +200,22 @@
 									<div class="swiper-wrapper">
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
-												<div class="best-menu__img"><img src="/web/assets/images/@img_product01.png" alt=""></div>
+												<div class="best-menu__img"><img src="/assets/images/@img_product01.png" alt=""></div>
 											</div>
 										</div>
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
-												<div class="best-menu__img"><img src="/web/assets/images/@img_product_celeb.png" alt=""></div>
+												<div class="best-menu__img"><img src="/assets/images/@img_product_celeb.png" alt=""></div>
 											</div>
 										</div>
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
-												<div class="best-menu__img"><img src="/web/assets/images/dummy.png" alt=""></div>
+												<div class="best-menu__img"><img src="/assets/images/dummy.png" alt=""></div>
 											</div>
 										</div>
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
-												<div class="best-menu__img"><img src="/web/assets/images/@img_product_celeb.png" alt=""></div>
+												<div class="best-menu__img"><img src="/assets/images/@img_product_celeb.png" alt=""></div>
 											</div>
 										</div>
 									</div>
@@ -236,19 +236,19 @@
 									<div class="swiper-wrapper">
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
-												<div class="best-menu__img"><img src="/web/assets/images/@img_product02.png" alt=""></div>
+												<div class="best-menu__img"><img src="/assets/images/@img_product02.png" alt=""></div>
 											</div>
 										</div>
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
-												<div class="best-menu__img"><img src="/web/assets/images/@img_product_celeb.png" alt=""></div>
+												<div class="best-menu__img"><img src="/assets/images/@img_product_celeb.png" alt=""></div>
 											</div>
 										</div>
 									</div>
 								</div>
 							</div>
 							<div class="best-menu__item best-menu__item--figure">
-								<div class="best-menu__img"><img src="/web/assets/images/dummy.png" alt=""></div>
+								<div class="best-menu__img"><img src="/assets/images/dummy.png" alt=""></div>
 							</div>
 						</div>
 						<div class="best-menu__row best-menu__row--split">
@@ -268,12 +268,12 @@
 										<div class="swiper-wrapper">
 											<div class="swiper-slide">
 												<div class="best-menu__inner">
-													<div class="best-menu__img"><img src="/web/assets/images/@img_product03.png" alt=""></div>
+													<div class="best-menu__img"><img src="/assets/images/@img_product03.png" alt=""></div>
 												</div>
 											</div>
 											<div class="swiper-slide">
 												<div class="best-menu__inner">
-													<div class="best-menu__img"><img src="/web/assets/images/@img_product_celeb.png" alt=""></div>
+													<div class="best-menu__img"><img src="/assets/images/@img_product_celeb.png" alt=""></div>
 												</div>
 											</div>
 										</div>
@@ -294,12 +294,12 @@
 										<div class="swiper-wrapper">
 											<div class="swiper-slide">
 												<div class="best-menu__inner">
-													<div class="best-menu__img"><img src="/web/assets/images/@img_product04.png" alt=""></div>
+													<div class="best-menu__img"><img src="/assets/images/@img_product04.png" alt=""></div>
 												</div>
 											</div>
 											<div class="swiper-slide">
 												<div class="best-menu__inner">
-													<div class="best-menu__img"><img src="/web/assets/images/@img_product_celeb.png" alt=""></div>
+													<div class="best-menu__img"><img src="/assets/images/@img_product_celeb.png" alt=""></div>
 												</div>
 											</div>
 										</div>
@@ -320,12 +320,12 @@
 										<div class="swiper-wrapper">
 											<div class="swiper-slide">
 												<div class="best-menu__inner">
-													<div class="best-menu__img"><img src="/web/assets/images/@img_product05.png" alt=""></div>
+													<div class="best-menu__img"><img src="/assets/images/@img_product05.png" alt=""></div>
 												</div>
 											</div>
 											<div class="swiper-slide">
 												<div class="best-menu__inner">
-													<div class="best-menu__img"><img src="/web/assets/images/@img_product_celeb.png" alt=""></div>
+													<div class="best-menu__img"><img src="/assets/images/@img_product_celeb.png" alt=""></div>
 												</div>
 											</div>
 										</div>
@@ -349,13 +349,13 @@
 											<div class="swiper-slide">
 												<div class="best-menu__inner">
 													<div class="best-menu__img">
-														<img src="/web/assets/images/@product.png" alt="">
+														<img src="/assets/images/@product.png" alt="">
 													</div>
 												</div>
 											</div>
 											<div class="swiper-slide">
 												<div class="best-menu__inner">
-													<div class="best-menu__img"><img src="/web/assets/images/dummy.png" alt=""></div>
+													<div class="best-menu__img"><img src="/assets/images/dummy.png" alt=""></div>
 												</div>
 											</div>
 										</div>
@@ -379,12 +379,12 @@
 									<div class="swiper-wrapper">
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
-												<div class="best-menu__img"><img src="/web/assets/images/@img_product06.png" alt=""></div>
+												<div class="best-menu__img"><img src="/assets/images/@img_product06.png" alt=""></div>
 											</div>
 										</div>
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
-												<div class="best-menu__img"><img src="/web/assets/images/@img_product_celeb.png" alt=""></div>
+												<div class="best-menu__img"><img src="/assets/images/@img_product_celeb.png" alt=""></div>
 											</div>
 										</div>
 									</div>
@@ -405,12 +405,12 @@
 									<div class="swiper-wrapper">
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
-												<div class="best-menu__img"><img src="/web/assets/images/@img_product07.png" alt=""></div>
+												<div class="best-menu__img"><img src="/assets/images/@img_product07.png" alt=""></div>
 											</div>
 										</div>
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
-												<div class="best-menu__img"><img src="/web/assets/images/@img_product_celeb.png" alt=""></div>
+												<div class="best-menu__img"><img src="/assets/images/@img_product_celeb.png" alt=""></div>
 											</div>
 										</div>
 									</div>
@@ -431,12 +431,12 @@
 									<div class="swiper-wrapper">
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
-												<div class="best-menu__img"><img src="/web/assets/images/@img_product08.png" alt=""></div>
+												<div class="best-menu__img"><img src="/assets/images/@img_product08.png" alt=""></div>
 											</div>
 										</div>
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
-												<div class="best-menu__img"><img src="/web/assets/images/@img_product_celeb.png" alt=""></div>
+												<div class="best-menu__img"><img src="/assets/images/@img_product_celeb.png" alt=""></div>
 											</div>
 										</div>
 									</div>
@@ -509,16 +509,16 @@
 						<div class="celeb-curation__swiper">
 							<div class="celeb-curation__celeb">
 								<div class="celeb-curation__cut">
-									<img src="/web/assets/images/@dummy_seleb01.png" alt="">
+									<img src="/assets/images/@dummy_seleb01.png" alt="">
 								</div>
 								<div class="celeb-curation__cut">
-									<img src="/web/assets/images/@dummy_seleb02.png" alt="">
+									<img src="/assets/images/@dummy_seleb02.png" alt="">
 								</div>
 								<div class="celeb-curation__cut">
-									<img src="/web/assets/images/@dummy_seleb03.png" alt="">
+									<img src="/assets/images/@dummy_seleb03.png" alt="">
 								</div>
 								<div class="celeb-curation__cut">
-									<img src="/web/assets/images/@dummy_seleb04.png" alt="">
+									<img src="/assets/images/@dummy_seleb04.png" alt="">
 								</div>
 							</div>
 							<div class="swiper">
@@ -530,7 +530,7 @@
 													<div class="menu__item">
 														<div class="menu__round">
 															<div class="menu__inner">
-																<div class="menu__img"><img src="/web/assets/images/dummy.png" alt=""></div>
+																<div class="menu__img"><img src="/assets/images/dummy.png" alt=""></div>
 															</div>
 														</div>
 													</div>
@@ -539,7 +539,7 @@
 															<div class="menu__inner">
 																<a href="#" class="menu__link">
 																	<div class="menu__img">
-																		<img src="/web/assets/images/product.png" alt="">
+																		<img src="/assets/images/product.png" alt="">
 																	</div>
 																	<div class="menu__info">
 																		<p class="menu__name">
@@ -562,7 +562,7 @@
 													<div class="menu__item">
 														<div class="menu__round">
 															<div class="menu__inner">
-																<div class="menu__img"><img src="/web/assets/images/dummy.png" alt=""></div>
+																<div class="menu__img"><img src="/assets/images/dummy.png" alt=""></div>
 															</div>
 														</div>
 													</div>
@@ -571,7 +571,7 @@
 															<div class="menu__inner">
 																<a href="#" class="menu__link">
 																	<div class="menu__img">
-																		<img src="/web/assets/images/product.png" alt="">
+																		<img src="/assets/images/product.png" alt="">
 																	</div>
 																	<div class="menu__info">
 																		<p class="menu__name">
