--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>INSTANTPUNK HTML PATH</title>
-	<link rel="stylesheet" href="/assets/css/ui.css">
+	<link rel="stylesheet" href="assets/css/ui.css">
 </head>
 <body>
 	<div id="wrap">
@@ -33,7 +33,7 @@
 				<tr>
 					<td>Main</td>
 					<td>PC_MAN_1000</td>
-					<td><a href="/PC_MAN_1000.html" target="_blank">/PC_MAN_1000.html</a></td>
+					<td><a href="./PC_MAN_1000.html" target="_blank">./PC_MAN_1000.html</a></td>
 					<td>작업중</td>
 				</tr>
 				<tr>
@@ -45,25 +45,25 @@
 				<tr>
 					<td>Product > 목록</td>
 					<td>PC_SHP_1000</td>
-					<td><a href="/product/PC_SHP_1000.html" target="_blank">/product/PC_SHP_1000.html</a></td>
+					<td><a href="./product/PC_SHP_1000.html" target="_blank">./product/PC_SHP_1000.html</a></td>
 					<td>작업중</td>
 				</tr>
 				<tr>
 					<td>Product > 상세</td>
 					<td>PC_SHP_1001</td>
-					<td><a href="/product/PC_SHP_1001.html" target="_blank">/product/PC_SHP_1001.html</a></td>
+					<td><a href=".\/product/PC_SHP_1001.html" target="_blank">./product/PC_SHP_1001.html</a></td>
 					<td>작업중</td>
 				</tr>
 				<tr>
 					<td>Product > 상품후기</td>
 					<td>PC_SHP_1001</td>
-					<td><a href="/product/PC_SHP_1004.html" target="_blank">/product/PC_SHP_1004.html</a></td>
+					<td><a href="./product/PC_SHP_1004.html" target="_blank">./product/PC_SHP_1004.html</a></td>
 					<td>작업중</td>
 				</tr>
 				<tr>
 					<td>검색</td>
 					<td>PC_ODR_1001</td>
-					<td><a href="/search/PC_ODR_1001.html" target="_blank">/search/PC_ODR_1001.html</a></td>
+					<td><a href="./search/PC_ODR_1001.html" target="_blank">./search/PC_ODR_1001.html</a></td>
 					<td>작업중</td>
 				</tr>
 				<tr>
